--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,9 +1,12 @@
 .navbar {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
   align-items: center;
+  width: 100%;
+  max-width: 1440px;
+  height: 100%;
+  margin: auto;
   height: 50px;
-  background-color: whitesmoke;
   color: darkslategrey;
 }
 
