--- a/src/common/components/FlowerCard/FlowerCard.css
+++ b/src/common/components/FlowerCard/FlowerCard.css
@@ -19,18 +19,20 @@
   font-weight: bold;
   font-size: 24px;
   margin-top: 10px;
+  cursor: default;
 }
 
 .flower-card-subname {
   font-size: 18px;
   margin-top: 5px;
+  cursor: default;
 }
 
 .flower-card-favorite {
   margin-top: 10px;
   background-color: transparent;
   border: none;
-  cursor: pointer;
+
   color: #666;
   outline: none;
   display: flex;
@@ -38,12 +40,13 @@
   margin: 10px;
 }
 
-.flower-card-favorite:hover {
-  color: #f50057;
-}
-
 .flower-card-favorite svg {
   margin-right: 5px;
+  cursor: pointer;
+}
+
+.flower-card-favorite svg:hover {
+  color: #f50057;
 }
 
 .flower-card-favorite.red svg {
