--- a/src/auth/components/LoginModal/SuccessModal/LoginSuccessModal.css
+++ b/src/auth/components/LoginModal/SuccessModal/LoginSuccessModal.css
@@ -1,6 +1,4 @@
-/* RegisterModal.css */
-
-.register-success-modal {
+.login-success-modal {
   background-color: #ffffff;
   border-radius: 8px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
@@ -8,14 +6,20 @@
   width: 550px;
 }
 
-.register-success-modal-title {
+.login-success-modal-title {
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 50px;
   text-transform: uppercase;
 }
 
-.register-success-modal-submit-button {
+.login-success-modal-row {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.login-success-modal-submit-button {
   background-color: #007bff;
   border: none;
   border-radius: 4px;
@@ -24,10 +28,10 @@
   font-size: 16px;
   font-weight: bold;
   padding: 15px;
-  width: 170px;
+  width: 120px;
   margin-top: 20px;
 }
 
-.register-success-modal-submit-button:hover {
+.login-success-modal-submit-button:hover {
   background-color: #0069d9;
 }
