--- a/src/auth/components/RegisterModal/SuccessModal/RegisterSuccessModal.css
+++ b/src/auth/components/RegisterModal/SuccessModal/RegisterSuccessModal.css
@@ -29,3 +29,20 @@
 .register-success-modal-submit-button:hover {
   background-color: #0069d9;
 }
+
+.modal-close-button {
+  background-color: rgb(209, 2, 2);
+  border: none;
+  border-radius: 4px;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 15px;
+  width: 170px;
+  margin-top: 20px;
+}
+
+.modal-close-button:hover {
+  background-color: darkred;
+}
