--- a/src/common/components/FlowerCard/FlowerCard.css
+++ b/src/common/components/FlowerCard/FlowerCard.css
@@ -2,17 +2,28 @@
   display: flex;
   flex-direction: column;
   border-radius: 4px;
-  width: 18%;
+  width: 22%;
   margin: 10px;
   background-color: antiquewhite;
+  position: relative;
 }
 
 .flower-card-img {
+  position: relative;
   width: 100%;
-  height: 250px;
-  object-fit: cover;
+  height: 360px;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
+  object-fit: cover;
+  filter: brightness(80%);
+}
+
+.flower-card-data {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  color: white;
 }
 
 .flower-card-name {
@@ -25,23 +36,26 @@
 .flower-card-subname {
   font-size: 18px;
   margin-top: 5px;
+  margin-bottom: 20px;
   cursor: default;
 }
 
 .flower-card-favorite {
-  margin-top: 10px;
+  margin: 10px;
   background-color: transparent;
   border: none;
-
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: blanchedalmond;
+  border-radius: 20%;
   color: #666;
   outline: none;
   display: flex;
   align-items: center;
-  margin: 10px;
 }
 
 .flower-card-favorite svg {
-  margin-right: 5px;
   cursor: pointer;
 }
 
