Pagination wip. updated user login action

--- a/src/auth/components/LoginModal/LoginModal.css
+++ b/src/auth/components/LoginModal/LoginModal.css
@@ -53,3 +53,13 @@
 .login-modal-submit-button:hover {
   background-color: #0069d9;
 }
+
+.login-modal-submit-button:disabled {
+  background-color: rgb(50, 53, 53);
+  cursor: not-allowed;
+}
+
+.login-modal-submit-button:disabled:hover {
+  background-color: rgb(38, 40, 40);
+  cursor: not-allowed;
+}
