--- a/src/common/components/FlowerCard/FlowerCard.css
+++ b/src/common/components/FlowerCard/FlowerCard.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 4px;
-  width: 22%;
+  width: 18%;
   margin: 10px;
   background-color: antiquewhite;
   position: relative;
@@ -12,8 +12,7 @@
   position: relative;
   width: 100%;
   height: 360px;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
+  border-radius: 5px;
   object-fit: cover;
   filter: brightness(80%);
 }
