--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,9 @@
   margin: 30px auto;
 }
 
-.modal {
+/* MODAL */
+
+.modal-container {
   position: fixed;
   left: 0;
   top: 0;
@@ -19,8 +21,89 @@
   display: none;
 }
 
-.modal.show {
+.modal-container.show {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.modal {
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  padding: 50px;
+  width: 550px;
+}
+
+.modal-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 50px;
+  text-transform: uppercase;
+}
+
+.modal-row {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 25px;
+}
+
+.modal-center-row {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.modal-row label {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: end;
+  flex-basis: 20%;
+  padding-right: 15px;
+}
+
+.modal-row input {
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  font-size: 16px;
+  padding: 10px;
+  width: 75%;
+  flex-basis: 80%;
+}
+
+.modal-row input.invalid {
+  border: 2px solid red;
+}
+
+.modal-row .date-picker {
+  width: 40%;
+  margin-right: auto;
+}
+
+.modal-submit-button {
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 15px;
+  width: 170px;
+  margin-top: 20px;
+}
+
+.modal-submit-button:hover {
+  background-color: #0069d9;
+}
+
+.modal-submit-button:disabled {
+  background-color: rgb(50, 53, 53);
+  cursor: not-allowed;
+}
+
+.modal-submit-button:disabled:hover {
+  background-color: rgb(38, 40, 40);
+  cursor: not-allowed;
 }
