--- a/src/common/components/Navbar/NavbarItem/NavbarItem.css
+++ b/src/common/components/Navbar/NavbarItem/NavbarItem.css
@@ -16,8 +16,11 @@
   color: darkslategray;
   text-decoration: none;
   width: 100%;
+  height: 100%;
   box-sizing: border-box;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .navbar-item a:hover {
@@ -34,10 +37,14 @@
   color: darkslategray;
   text-decoration: none;
   width: 100%;
+  height: 100%;
   box-sizing: border-box;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .navbar-item span:hover {
   color: white;
+  cursor: pointer;
 }
